backend/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reto2-back-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: backend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reto2-back-service
            port:
              number: 80
